kubernetes-config/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  # ClusterIP exposes a set of pods to other objects in the cluster.
  type: ClusterIP
  # Create a selector so that the service knows what set of pods it
  # is supposed to be providing access to.
  selector: 
    component: web
  ports: 
      # The port property is going to be how other pods or other 
      # objects inside our cluster are going to access the pods
      # we are governing access to.
    - port: 3000
      # The port on the target pod that we are providing access to.
      targetPort: 3000
