kubernetes-config/rtmp-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rtmp-server
  ports:
    - port: 8001
      targetPort: 8001
