kubernetes-config/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service.yaml
spec:
  type: ClusterIP
  selector: 
    component: server
  ports:
    - port: 8000
      targetPort: 8000
